# scorpion-antimalware

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  AUTHORS.md  CITATION.bib  CMakeLists.txt  LICENSE  README.md  conda-requirements.txt  configure_build.sh  download_gdrive.py  fim_config.xml  requirements.txt  tcp.sh  windows_engine_tests.bat
.github/: CODEOWNERS
.github/workflows/: windows_builds.yml  windows_engine_build  windows_engine_build.yml  windows_engine_cmake.yml  windows_engine_run_tests.yml  windows_sam_build.yml  windows_sam_cmake.yml
CI/: windows_engine_build.bat  windows_engine_tests.bat  windows_sam_build.bat
cmake/: Utils.cmake
cmd-line-tools/: .gitignore
resources/scripts/: ScheduledTasksViewer.py  appWatchman.py  collect.py  dailyCollect.py  download_from_bazzar.py  download_json_from_cuckoo.py  featureExtractor.py  logsCollector.py  packetSniffer.py  processGuardian.py  processReader.py  servicesWatcher.py  upload_to_cuckoo.py
sam-cli-tools/: .gitignore  CMakeLists.txt  clitoolsmain.cpp  clitoolsmain.hpp
sam-engine/: .gitignore  CMakeLists.txt  callbackmacros.hpp  pepathlsmonitor.cpp  pepathlsmonitor.hpp  sam-engine.cpp  sam-engine.h  samengine.cpp  samengine.h  samengine.hpp
sam-engine/FIM/: .gitignore  fim.cpp  (+2 more)
sam-engine/PE-pathls-generator/: .gitignore  CMakeLists.txt  pepathlscollector.cpp  pepathlscollector.hpp  pepathlsgenerator.cpp  pepathlsgenerator.h  pepathlsgenerator.hpp
tests/: .gitignore  CMakeLists.txt  README.md  dummypegenerator.cpp  dummypegenerator.hpp  testsmain.cpp  testsmain.h  testsmain.hpp
(+70 files in other folders)
